add quality to jpg and webp, add xml documentation
