# src/ImageResizer/Controllers/ImageResizerController.cs
@@ -18,13 +18,22 @@ public class ImageResizerController : ControllerBase
         _configuration = configuration ?? throw new ArgumentNullException(nameof(configuration));
     }
 
+    /// <summary>
+    /// Конвертирование изображение и уменьшение размера по самой большой стороне
+    /// </summary>
+    /// <param name="src">Ссылка на изображение, спец символы должны быть кодированы в UTF-8 (например методом encodeURIComponent в js)</param>
+    /// <param name="imageFormat">Формат изображения, по умолчанию jpg</param>
+    /// <param name="size">Размер по самой большой стороне</param>
+    /// <param name="quality">Качество изображения, от 1 до 100 для форматов jpg и webp, по умолчанию 75</param>
+    /// <returns></returns>
     [HttpGet("optimize")]
     [Produces("image/jpeg", "image/webp", "text/plain")]
     [ProducesResponseType(StatusCodes.Status400BadRequest)]
     public async Task<IActionResult> Get(
         [FromQuery] string src,
         [FromQuery] ImageFormat imageFormat = ImageFormat.png,
-        [FromQuery] int size = 500)
+        [FromQuery] int size = 500,
+        [FromQuery] int quality = 75)
     {
         if (size <= 0)
         {
@@ -32,11 +41,14 @@ public class ImageResizerController : ControllerBase
         }
         var uri = new Uri(src);
         var splitHostName = uri.Host.Split('.');
-        var t = _configuration.GetValue<string>("AllowedDomain");
         if (splitHostName.Length <= 1 ||
             (splitHostName[^2] + "." + splitHostName[^1] != _configuration.GetValue<string>("AllowedDomain")))
         {
             ModelState.AddModelError(nameof(src), "Incorrect url");
+        }
+        if (quality < 1 || quality > 100)
+        {
+            ModelState.AddModelError(nameof(quality), "Incorrect quality value");
         }
         if (!ModelState.IsValid)
         {
@@ -48,6 +60,7 @@ public class ImageResizerController : ControllerBase
             Url = src,
             Size = size,
             ImageFormat = imageFormat,
+            Quality = quality,
         };
         var resizedImage = await _imageResizer.Resize(imageParameters);
 
